src/objects/Account_Income__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE( MONTH(gf_income_movement_date__c),
1,&quot;Enero&quot;,
2,&quot;Febrero&quot;,
3,&quot;Marzo&quot;,
4,&quot;Abril&quot;,
5,&quot;Mayo&quot;,
6,&quot;Junio&quot;,
7,&quot;Julio&quot;,
8,&quot;Agosto&quot;,
9,&quot;Septiembre&quot;,
10,&quot;Octubre&quot;,
11,&quot;Noviembre&quot;,
12,&quot;Diciembre&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>TEXT(YEAR(gf_income_movement_date__c)) &amp; &quot; &quot; &amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Label__c</fullName>
        <formula>CASE( Text(gf_income_type__c), 
&quot;01&quot;,&quot;Ingreso Manual&quot;, 
&quot;02&quot;,&quot;Ingreso Automático&quot;, 
&quot;03&quot;,&quot;Saldo Medio Anual&quot;, 
&quot;04&quot;,&quot;Saldo Medio Mensual&quot;,
&quot;None&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Incomes</relationshipLabel>
        <relationshipName>Account_Incomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gf_income_amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gf_income_movement_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Income Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_income_type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>product_service_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Income</label>
    <nameField>
        <displayFormat>INC-{0000000000}</displayFormat>
        <label>Income Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>